--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,3 +9,15 @@
     @apply font-main;
   }
 }
+
+/* Hiding scrollbar copied from: https://stackoverflow.com/a/66436651 */
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
